# Analisando-Dados-com-Bard

./: pyproject.toml
