[tool.poetry]
name = "analisando-dados-com-bard"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "analisando_dados_com_bard"}]

[tool.poetry.dependencies]
python = "3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
